# confidior-engine

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
data/: archaeology.db
scripts/: fetch_c5_data.py  fetch_tee_cves.py  mark_patched_attacks.py  seed_attacks_db.py
src/cli/: main.py
src/core/: __init__.py  attacks.py  policy.py  risk.py  taxonomy.py
src/export/: badge.py  c5.py  dsse.py  measurement.py  rekor.py
src/ingest/adapters/: nitro.py  sevsnp.py  tdx.py
src/ingest/raw/: c5.py
src/tools/: archaeology.py
src/web/: app.py
src/web/templates/: 404.html  archaeology.html  base.html  index.html  result.html  submit.html  verify.html  verify_result.html
tests/: test_adapters.py  test_archaeology.py  test_c5.py  test_c5_export.py  test_dsse.py  test_dsse_trust.py  test_end_to_end.py  test_evaluator.py  test_export_extras.py  test_graph.py  test_integration.py  test_measurement.py  test_nitro_adapter.py  test_policy_parser.py  test_rekor.py  test_risk.py  test_sevsnp_adapter.py  test_web.py
tests/fixtures/nitro/: aws-c6g-nitro-attestation.hex  sample_attestation.hex
tests/fixtures/policy/: default.yaml
tests/fixtures/registry/: sample_registry.yaml
tests/fixtures/sevsnp/: real_sev_snp.hex  sample_report.hex
tests/fixtures/tdx/: real_quote.hex  sample_quote.hex
