[project]
name = "confidior-engine"
version = "0.1.0"
description = "Honest, graded, attack-aware assurance. For any evidence you can verify."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "cbor>=1.0.0",
    "cryptography>=48.0.0",
    "cvm-attest>=1.0.0",
    "pyyaml>=6.0.3",
    "sev-pytools",
    "tdx-pytools",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
    "secretvm-verify>=0.9.2",
]

[project.scripts]
confidior = "src.cli.main:main"
confidior-web = "src.web.app:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.12.0",
    "mypy>=1.15.0",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
]

[tool.uv.sources]
sev-pytools = { git = "https://github.com/TEE-Attestation/sev_pytools.git" }
tdx-pytools = { git = "https://github.com/TEE-Attestation/tdx_pytools.git" }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
